# KeystoneWorkspace

./: myNotes.md
examples/: CMakeLists.txt
examples/alpha/: CMakeLists.txt  app.lds
examples/alpha/eapp/: alpha.c  edge_wrapper.c  edge_wrapper.h
examples/alpha/eapp/malloc/: malloc.c
examples/alpha/host/: edge_wrapper.cpp  edge_wrapper.h  main.cpp
examples/memom/: CMakeLists.txt
examples/memom/eapp/: memom.c
examples/memom/host/: mhost.cpp
overlays/keystone/configs/: riscv64_generic_defconfig
